<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".content.create_pqrs.anonymous.CreatePQRSAnonymousActivity">

    <ImageView
        android:id="@+id/btnBack"
        android:layout_width="@dimen/_26sdp"
        android:layout_height="@dimen/_26sdp"
        app:layout_constraintBottom_toTopOf="@+id/guideline9"
        app:layout_constraintStart_toStartOf="@+id/guideline10"
        app:srcCompat="@drawable/ic_back" />

    <TextView

        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pqrs_information"
        android:textColor="@color/black"
        android:textSize="@dimen/_18ssp"
        android:fontFamily="@font/sofia_pro"
        android:layout_marginTop="@dimen/_16sdp"
        app:layout_constraintStart_toStartOf="@+id/guideline10"
        app:layout_constraintTop_toTopOf="@+id/guideline9" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/_16sdp"
        android:layout_marginBottom="@dimen/_16sdp"
        app:layout_constraintBottom_toTopOf="@+id/btnLogin"
        app:layout_constraintEnd_toStartOf="@+id/guideline11"
        app:layout_constraintStart_toStartOf="@+id/guideline10"
        app:layout_constraintTop_toBottomOf="@+id/textView3">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@+id/appCompatButton"
            app:layout_constraintEnd_toStartOf="@+id/guideline11"
            app:layout_constraintStart_toStartOf="@+id/guideline10"
            app:layout_constraintTop_toBottomOf="@+id/textView3">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:visibility="gone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/sofia_pro"
                    android:text="Tipo de documento"
                    android:textColor="@color/main_dark"
                    android:textSize="@dimen/_13ssp" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <Spinner
                        android:visibility="gone"
                        android:id="@+id/spDocumentType"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_30sdp"
                        android:layout_marginTop="@dimen/_4sdp"
                        android:background="@drawable/spinner_shape"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageView
                        android:visibility="gone"
                        android:layout_width="@dimen/_16sdp"
                        android:layout_height="@dimen/_16sdp"
                        android:layout_marginEnd="@dimen/_8sdp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="@+id/spDocumentType"
                        app:srcCompat="@drawable/ic_baseline_keyboard_arrow_down_24"
                        app:tint="@color/main_light" />
                </androidx.constraintlayout.widget.ConstraintLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_12sdp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/sofia_pro"
                    android:text="@string/pqrs_type"
                    android:textColor="@color/main_dark"
                    android:textSize="@dimen/_13ssp" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <Spinner
                        android:id="@+id/spPQRSType"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_30sdp"
                        android:layout_marginTop="@dimen/_4sdp"
                        android:background="@drawable/spinner_shape"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageView
                        android:layout_width="@dimen/_16sdp"
                        android:layout_height="@dimen/_16sdp"
                        android:layout_marginEnd="@dimen/_8sdp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="@+id/spPQRSType"
                        app:srcCompat="@drawable/ic_baseline_keyboard_arrow_down_24"
                        app:tint="@color/main_light" />
                </androidx.constraintlayout.widget.ConstraintLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_12sdp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/sofia_pro"
                    android:text="@string/pqrs_area"
                    android:textColor="@color/main_dark"
                    android:textSize="@dimen/_13ssp" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <Spinner
                        android:id="@+id/spArea"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_30sdp"
                        android:layout_marginTop="@dimen/_4sdp"
                        android:background="@drawable/spinner_shape"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageView
                        android:layout_width="@dimen/_16sdp"
                        android:layout_height="@dimen/_16sdp"
                        android:layout_marginEnd="@dimen/_8sdp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="@+id/spArea"
                        app:srcCompat="@drawable/ic_baseline_keyboard_arrow_down_24"
                        app:tint="@color/main_light" />
                </androidx.constraintlayout.widget.ConstraintLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_12sdp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/sofia_pro"
                    android:text="@string/pqrs_message"
                    android:textColor="@color/main_dark"
                    android:textSize="@dimen/_13ssp" />

                <EditText
                    android:id="@+id/etMessage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_4sdp"
                    android:background="@drawable/spinner_shape"
                    android:gravity="top"
                    android:minLines="5"
                    android:padding="@dimen/_6sdp"
                    android:textSize="@dimen/_13ssp" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnSend"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_32sdp"
                    android:background="@color/main_light"
                    android:fontFamily="@font/sofia_pro"
                    android:text="@string/pqrs_send"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_14ssp" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnLogin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:fontFamily="@font/sofia_pro"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textColor="@color/main"
        android:textSize="@dimen/_14ssp"
        app:layout_constraintBottom_toTopOf="@+id/guideline12"
        app:layout_constraintEnd_toStartOf="@+id/guideline11"
        app:layout_constraintStart_toStartOf="@+id/guideline10" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="55dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.97" />

</androidx.constraintlayout.widget.ConstraintLayout>