<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".content.my_remits.details.PQRSDetailActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:background="@color/main"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/btnBack"
            android:layout_width="@dimen/_24sdp"
            android:layout_height="@dimen/_24sdp"
            android:layout_marginLeft="@dimen/_8sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_arrow_back" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_16sdp"
        android:fontFamily="@font/sofia_pro"
        android:text="PQRS"
        android:textColor="@color/black"
        android:textSize="@dimen/_17ssp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />

    <TextView
        android:visibility="gone"
        android:id="@+id/btnMyRemits"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_16sdp"
        android:layout_marginRight="@dimen/_8sdp"
        android:fontFamily="@font/sofia_pro"
        android:text="Mis remisiones"
        android:textColor="@color/main_dark"
        android:textSize="@dimen/_17ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_8sdp"
        app:cardBackgroundColor="@color/light_gray"
        app:cardCornerRadius="@dimen/_12sdp"
        app:cardElevation="@dimen/_4sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:padding="@dimen/_8sdp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_8sdp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/sofia_pro"
                        android:text="@string/pqrs_type"
                        android:textColor="@color/main"
                        android:textSize="@dimen/_12ssp" />

                    <TextView
                        android:id="@+id/txtPqrsType"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_30sdp"
                        android:layout_marginTop="@dimen/_4sdp"
                        android:background="@drawable/edittext_shape_2"
                        android:gravity="center"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_12ssp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_8sdp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/sofia_pro"
                        android:text="@string/pqrs_entry_day"
                        android:textColor="@color/main"
                        android:textSize="@dimen/_12ssp" />

                    <TextView
                        android:id="@+id/txtDate"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_30sdp"
                        android:layout_marginTop="@dimen/_4sdp"
                        android:background="@drawable/edittext_shape_2"
                        android:gravity="center"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_12ssp" />

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/llMore"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/_16sdp"
                android:orientation="vertical"
                android:visibility="visible">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/_8sdp"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/sofia_pro"
                            android:text="@string/pqrs_deadline"
                            android:textColor="@color/main"
                            android:textSize="@dimen/_12ssp" />

                        <TextView
                            android:id="@+id/txtLimitDate"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/_30sdp"
                            android:layout_marginTop="@dimen/_4sdp"
                            android:background="@drawable/edittext_shape_2"
                            android:gravity="center"
                            android:textColor="@color/black"
                            android:textSize="@dimen/_12ssp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_8sdp"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/sofia_pro"
                            android:text=""
                            android:textColor="@color/main"
                            android:textSize="@dimen/_12ssp" />

                        <TextView
                            android:id="@+id/txtDaysLeft"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/_30sdp"
                            android:layout_marginTop="@dimen/_4sdp"
                            android:background="@drawable/edittext_shape_2"
                            android:gravity="center"
                            android:textColor="@color/black"
                            android:textSize="@dimen/_12ssp" />

                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/_16sdp"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/_8sdp"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/sofia_pro"
                            android:text="@string/pqrs_status"
                            android:textColor="@color/main"
                            android:textSize="@dimen/_12ssp" />

                        <TextView
                            android:id="@+id/txtPqrsStatus"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/_30sdp"
                            android:layout_marginTop="@dimen/_4sdp"
                            android:background="@drawable/edittext_shape_2"
                            android:gravity="center"
                            android:textColor="@color/black"
                            android:textSize="@dimen/_12ssp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_8sdp"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/sofia_pro"
                            android:text="@string/pqrs_area"
                            android:textColor="@color/main"
                            android:textSize="@dimen/_12ssp" />

                        <TextView
                            android:id="@+id/txtArea"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/_30sdp"
                            android:layout_marginTop="@dimen/_4sdp"
                            android:background="@drawable/edittext_shape_2"
                            android:gravity="center"
                            android:textColor="@color/black"
                            android:textSize="@dimen/_12ssp" />

                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/_16sdp"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/_8sdp"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/sofia_pro"
                            android:text="@string/pqrs_observation"
                            android:textColor="@color/main"
                            android:textSize="@dimen/_12ssp" />

                        <TextView
                            android:id="@+id/txtObservations"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="top"
                            android:layout_marginTop="@dimen/_4sdp"
                            android:background="@drawable/edittext_shape_2"
                            android:minLines="4"
                            android:padding="@dimen/_4sdp"
                            android:textColor="@color/black"
                            android:textSize="@dimen/_9ssp" />

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/_16sdp"
                android:layout_marginBottom="@dimen/_8sdp"
                android:gravity="end"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatButton
                    android:visibility="gone"
                    android:id="@+id/btnEdit"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_marginRight="@dimen/_8sdp"
                    android:background="@color/main"
                    android:fontFamily="@font/sofia_pro"
                    android:text="Editar"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_11ssp" />

                <androidx.appcompat.widget.AppCompatButton
                    android:visibility="gone"
                    android:id="@+id/btnRemit"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_marginRight="@dimen/_8sdp"
                    android:background="@color/main_dark"
                    android:fontFamily="@font/sofia_pro"
                    android:text="Remitir"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_11ssp" />

            </LinearLayout>
        </LinearLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>